--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "tsx src/app.ts",
     "dev": "tsx watch src/app.ts",
     "build": "tsup src",
-    "test": "vitest"
+    "test": "vitest",
+    "seed": "ts-node src/config/database/seed/admin-seed.ts",
+    "coverage": "npx vitest --coverage"
   },
   "type": "module",
   "keywords": [],
@@ -17,6 +19,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
