--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
     "start": "tsx src/app.ts",
     "dev": "tsx watch src/app.ts",
     "build": "tsup src",
-    "test": "vitest",
+    "test": "jest",
     "seed": "ts-node src/config/database/seed/admin-seed.ts",
-    "coverage": "npx vitest --coverage"
+    "coverage": "npx jest --coverage"
   },
   "type": "module",
   "keywords": [],
-  "author": "",
+  "author": "Isa Moura",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
+    "jest": "^29.7.0",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
@@ -33,8 +35,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "vitest": "^1.2.1",
     "yup": "^1.3.3"
   }
 }
