--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "project-module-3",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
     "start": "tsx src/app.ts",
     "dev": "tsx watch src/app.ts",
@@ -11,32 +10,28 @@
     "seed": "ts-node src/config/database/seed/admin-seed.ts",
     "coverage": "npx jest --coverage"
   },
-  "type": "module",
   "keywords": [],
-  "author": "Isa Moura",
+  "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
-    "jest": "^29.7.0",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.3.2",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.0",
+    "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "vitest": "^1.2.1",
     "yup": "^1.3.3"
   }
 }
