--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "tsx src/app.ts",
     "dev": "tsx watch src/app.ts",
     "build": "tsup src",
-    "test": "jest",
+    "test": "vitest",
     "seed": "ts-node src/config/database/seed/admin-seed.ts",
     "coverage": "npx jest --coverage"
   },
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "tsup": "^8.0.1",
@@ -31,7 +32,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
-    "vitest": "^1.2.1",
+    "vitest": "^1.2.2",
     "yup": "^1.3.3"
   }
 }
