--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsup src",
     "test": "vitest",
     "seed": "ts-node src/config/database/seed/admin-seed.ts",
-    "coverage": "npx vitest --coverage"
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
+    "@vitest/coverage-v8": "^1.2.2",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
@@ -35,5 +36,6 @@
     "ts-node": "^10.9.2",
     "vitest": "^1.2.2",
     "yup": "^1.3.3"
-  }
+  },
+  "type": "module"
 }
