--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
@@ -22,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
@@ -37,5 +37,6 @@
     "vitest": "^1.2.2",
     "yup": "^1.3.3"
   },
-  "type": "module"
+  "type": "module",
+  "description": ""
 }
