--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src",
     "test": "vitest",
     "seed": "ts-node src/config/database/seed/admin-seed.ts",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "swagger-autogen": "node ./docs/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
+    "@types/swagger-ui-express": "^4.1.6",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
     "tsup": "^8.0.1",
@@ -33,6 +35,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-express-router": "^1.0.1",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "vitest": "^1.2.2",
     "yup": "^1.3.3"
